--- a/templates/accounts/reset_password.html
+++ b/templates/accounts/reset_password.html
@@ -1,15 +1,43 @@
-<form action="{% url 'reset_password' %}" method="POST">
-    {% csrf_token %}
+{% extends 'base.html' %}
 
-    <div class="form-group">
-        <input type="password" name="password" class="form-control" placeholder="New password" required>
+{% block title %}Reset Password{% endblock %}
+
+{% block content %}
+<section class="section-content padding-y" style="min-height: 80vh;">
+    <div class="container d-flex justify-content-center align-items-center">
+        <div class="card shadow-sm w-100"
+            style="max-width: 400px; padding: 30px; border-radius: 10px; margin-top: 50px; margin-bottom: 50px;">
+            <article class="card-body">
+
+                <h4 class="card-title mb-4 text-center">Reset Your Password</h4>
+
+                <form action="{% url 'reset_password' %}" method="POST">
+                    {% csrf_token %}
+
+                    <div class="form-group mb-3">
+                        <input type="password" name="password" class="form-control form-control-lg"
+                            placeholder="New Password" required>
+                    </div>
+
+                    <div class="form-group mb-4">
+                        <input type="password" name="confirm_password" class="form-control form-control-lg"
+                            placeholder="Confirm Password" required>
+                    </div>
+
+                    <button type="submit" class="btn btn-primary btn-lg btn-block">
+                        Reset Password
+                    </button>
+                </form>
+
+                <hr class="my-4">
+
+                <p class="text-center mb-0">
+                    Remembered your password?
+                    <a href="{% url 'login' %}">Login here</a>
+                </p>
+
+            </article>
+        </div>
     </div>
-
-    <div class="form-group">
-        <input type="password" name="confirm_password" class="form-control" placeholder="Confirm password" required>
-    </div>
-
-    <button type="submit" class="btn btn-primary btn-block">
-        Reset Password
-    </button>
-</form>
+</section>
+{% endblock %}
